--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://falseprotagonist.me/blog"
+baseURL = "http://www.falseprotagonist.me"
 theme = "cocoa"
 languageCode = "en-us"
 title = "This is a False Protagonist"
