--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseURL = "http://www.falseprotagonist.me"
-theme = "cocoa"
+theme = "xmin"
 languageCode = "en-us"
 title = "This is a False Protagonist"
 author = "Rinat Sabitov"
