--- a/wercker.yml
+++ b/wercker.yml
@@ -8,7 +8,7 @@ build:
         code: |
             $(git clone https://github.com/yihui/hugo-xmin ./themes/xmin)
     - sigma/hugo-build@1.16.3:
-        theme: cocoa
+        theme: xmin
         flags: --buildDrafts=true
 
 
