New post as a draft

--- a/config.toml
+++ b/config.toml
@@ -41,12 +41,12 @@ dateform               = "Jan 2, 2006"
 dateformfull           = "Mon Jan 2 2006 15:04:05 MST"
 email                  = "rinat.sabitov@gmail.com"
 faviconfile            = "img/leaf.ico"
-highlightjs            = true
 lang                   = "en"
+selfintro              = "I'm a python developer"
+footer = "&copy; [FalseProtagonist](https://falseprotagonist.me) 2017"
+# highlightjs            = true
 # github                 = "//github.com/histrio"
 # linkedin               = "//linkedin.com/in/rinatsabitov"
-noshowreadtime         = true
-selfintro              = "I'm a python developer"
+# noshowreadtime         = true
 # highlightjslanguages = ["go"]
 # highlightjsStyle     = "darcula"
-footer = "&copy; [FalseProtagonist](https://falseprotagonist.me) 2017"
