--- a/wercker.yml
+++ b/wercker.yml
@@ -7,6 +7,10 @@ build:
         name: download theme
         code: |
             $(git clone https://github.com/yihui/hugo-xmin ./themes/xmin)
+    - script:
+        name: enchance a theme
+        code: |
+            $(echo "{{ template "_internal/disqus.html" . }}" >> ./themes/xmin/layouts/partials/foot_custom.html)
     - sigma/hugo-build@1.16.3:
         theme: xmin
         flags: --buildDrafts=true
