--- a/wercker.yml
+++ b/wercker.yml
@@ -6,9 +6,9 @@ build:
     - script:
         name: download theme
         code: |
-            $(git clone https://github.com/yihui/hugo-xmin ./themes/xmin)
+            $(git clone git@github.com:gkmngrgn/hugo-alageek-theme.git themes/alageek)
     - sigma/hugo-build@1.16.3:
-        theme: xmin
+        theme: alageek
         flags: --buildDrafts=true
 
 
@@ -18,6 +18,6 @@ deploy:
         packages: git ssh-client
     - keanemind/gh-pages@0.2.4:
         token: $GIT_TOKEN
-        domain: www.falseprotagonist.me
+        domain: false.org.ru
         basedir: public
         repo: histrio/histrio.github.io
