--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://false.org.ru"
+baseURL = "https://false.org.ru/"
 languageCode = "en-us"
 title = "False Protagonist"
 author = "Rinat Sabitov"
