--- a/config.toml
+++ b/config.toml
@@ -25,8 +25,8 @@ copyright = "© 2020 by Rinat Sabitov"
 copyrightUrl = "https://false.org.ru"
 
 latestpostcount = 2
-telegram = "histrio"
-github = "histrio"
+#telegram = "histrio"
+#github = "histrio"
 
 [[menu.primary]]
 identifier = "code"
