--- a/wercker.yml
+++ b/wercker.yml
@@ -7,10 +7,10 @@ build:
         name: download theme
         code: |
             $(git clone https://github.com/gkmngrgn/hugo-alageek-theme.git themes/alageek)
-    - arjen/hugo-build@2.9.1:
-        theme: alageek
-        flags: --buildDrafts=true
-
+    - arjen/hugo-build:
+        version: "HEAD"
+        theme: "alageek"
+        flags: --buildDrafts=false
 
 deploy:
   steps:
